# 3D_transformations

./: .gitignore  CMakeLists.txt  README.md
dependencies/GLFW/include/glad/: glad.h
dependencies/GLFW/lib/: glfw3.lib
res/Shaders/: Basic.shader
src/: ErrorHandling.cpp  ErrorHandling.h  Shader.cpp  Shader.h  glad.c  main.cpp
